--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     </div>
 
     <!-- Sección Contacto -->
+    <form name="contact" netlify>
     <section id="contacto" class="contact-section">
         <div class="section-container">
             <div class="contact-info">
